<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_cloud"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title"
            style="@style/h1_pc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/password_protection" />

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:background="@null"
            android:onClick="handleClick"
            android:src="@drawable/button_close" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/protectionSwitchLayout"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/hd_grey"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/protectionSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_switch"
            android:checked="false"
            android:gravity="center_horizontal"
            android:textOff=""
            android:textOn="" />

        <TextView
            android:id="@+id/switchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/protection_switch" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:background="@drawable/hd_grey_start"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/input_password" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:ems="15"
            android:hint="@string/input_password" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:background="@drawable/hd_grey_end"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/confirmPasswordEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:ems="15"
            android:hint="@string/confirm_password" />
    </LinearLayout>

</LinearLayout>