<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_cloud"
    android:orientation="vertical">
    
    <TextView
        android:id="@+id/title"
        style="@style/h1_pc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/app_permit" />

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:onClick="handleClick"
        android:src="@drawable/button_close" />

    <LinearLayout
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/closeButton" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="3"
            android:text="@string/available"
            android:textSize="20sp" >
        </TextView>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="wrap_content" >
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="3"
            android:text="@string/kids"
            android:textSize="20sp" >

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/subTitle" >

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/bg_pad"
            android:cacheColorHint="#00000000"
            android:divider="@drawable/div_grey" >

        </ListView>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/bt_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:onClick="handleClick"
                android:src="@drawable/button_add" />

            <ImageButton
                android:id="@+id/bt_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:onClick="handleClick"
                android:src="@drawable/button_remove" />
        </LinearLayout>

        <ExpandableListView
            android:id="@+id/expandableListView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/bg_pad"
            android:cacheColorHint="#00000000"
            android:childDivider="@drawable/div_grey" >

        </ExpandableListView>
    </LinearLayout>

    <TextView
        android:id="@+id/infoView"
        style="@style/info_pc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title"
        android:layout_toRightOf="@+id/title"
        android:layout_marginLeft="20dp"
        android:text="" />

</RelativeLayout>